bk_ida/gccida/c3/mark_referenced_resources
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mark_referenced_resources/src/resource.c:700:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+88h] [rbp-18h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mark_referenced_resources/src/resource.c:712:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
insn = ( rtx)x[1]; 
             ^~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mark_referenced_resources/src/resource.c:736:20: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( link = ( rtx)x[4]; link; link = ( rtx)link[1] ) 
                   ^~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mark_referenced_resources/src/resource.c:736:45: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( link = ( rtx)x[4]; link; link = ( rtx)link[1] ) 
                                            ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mark_referenced_resources/src/resource.c:840:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)x)] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mark_referenced_resources/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mark_referenced_resources/src/resource.c:841:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v21 = mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)x)] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mark_referenced_resources/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mark_referenced_resources/src/resource.c:896:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)x)] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mark_referenced_resources/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mark_referenced_resources/src/resource.c:897:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v25 = mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)x)] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mark_referenced_resources/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mark_referenced_resources/src/obj/resource.o] Error 1
